<resources>
    <string name="app_name">MyNotify</string>
    <string name="action_settings">Settings</string>

    <!-- Notification Fragment Strings -->
    <string name="details_title">Details</string>
    <string name="links_title">Links</string>
    <string name="button_add">+</string>
    <string name="link_field_hint">Enter link here...</string>
    <string name="cancel_button">Cancel</string>
    <string name="trigger_button">Next: Trigger</string>

    <!-- Notification Trigger Fragment Strings -->
    <string name="triggers_title">Triggers</string>
    <string name="triggers_set_time_button">Change Time</string>
    <string name="triggers_set_date_button">Change Date</string>
    <string name="triggers_save_notification_button">Save Notification</string>
    <string name="notification_saved">Notification Saved</string>
</resources>
